[package]
name = "tinylisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
tracing = "0.1.3"
tracing-subscriber = "0.3"
tracing-forest = {git = "https://github.com/rspencer01/tracing-forest", rev="01c020d", features=["ansi", "env-filter"]}

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
